<resources>
    <string name="app_name">Steel Timer</string>
    <string name="finished_product">Finished Product</string>
    <string name="timer_start">00:00:00:00</string>
    <string name="current_load">Current Load</string>
    <string name="timer_twelve_hours">12:00:00</string>
    <string name="current_coal">Current Coal</string>
    <string name="timer_onehour_twentymin">01:20:00</string>
    <string name="add_coal">Add Coal</string>
    <string name="start">start</string>
    <string name="reset">reset</string>
</resources>

