<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_pad"
    tools:context="com.example.android.steeltimer.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_view_countdown"
        android:layout_alignRight="@+id/text_view_countdown"
        android:text="@string/finished_product"
        android:textSize="@dimen/text_one" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/timer_start"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_two" />

    <TextView
        android:id="@+id/current_burn_timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_countdown"
        android:layout_alignRight="@+id/text_view_countdown"
        android:text="@string/current_load"
        android:textSize="@dimen/text_one" />

    <TextView
        android:id="@+id/text_view_countdown_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_burn_timer_text"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/timer_twelve_hours"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_two" />

    <TextView
        android:id="@+id/current_coal_timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_countdown_two"
        android:layout_alignRight="@+id/text_view_countdown"
        android:text="@string/current_coal"
        android:textSize="@dimen/text_one" />

    <TextView
        android:id="@+id/text_view_countdown_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_burn_timer_text"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/timer_onehour_twentymin"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_two" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_add_coal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin"
            android:layout_toLeftOf="@+id/button_start_pause"
            android:layout_below="@+id/text_view_countdown"
            android:text="@string/add_coal"
            android:visibility="invisible"
            tools:visibility="visible"/>

        <Button
            android:id="@+id/button_start_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_countdown"
            android:layout_centerHorizontal="true"
            android:text="@string/start" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_countdown"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_toEndOf="@+id/button_start_pause"
            android:layout_toRightOf="@+id/button_start_pause"
            android:text="@string/reset"
            android:visibility="invisible"
            tools:visibility="visible" />

    </LinearLayout>

</LinearLayout>